--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/your-kit-id.js" crossorigin="anonymous"></script>
-    <script src="static/style.css" crossorigin="anonymous"></script>
 
 
 
@@ -23,50 +22,6 @@
         </div>
     </nav>
 
-    <div class="d-flex flex-column align-items-center" style="gap: 10px;">
-        <!-- Botão para cima -->
-        <button type="button" class="btn btn-outline-secondary p-3" onclick="arrow('up')">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 640 640" fill="currentColor">
-                <path
-                    d="M342.6 81.4C330.1 68.9 309.8 68.9 297.3 81.4L137.3 241.4C124.8 253.9 124.8 274.2 137.3 286.7C149.8 299.2 170.1 299.2 182.6 286.7L288 181.3L288 552C288 569.7 302.3 584 320 584C337.7 584 352 569.7 352 552L352 181.3L457.4 286.7C469.9 299.2 490.2 299.2 502.7 286.7C515.2 274.2 515.2 253.9 502.7 241.4L342.7 81.4z" />
-            </svg>
-        </button>
-
-        <!-- Linha do meio com esquerda e direita -->
-        <div class="d-flex justify-content-center" style="gap: 10px;">
-            <!-- Esquerda -->
-            <button type="button" class="btn btn-outline-secondary p-3" onclick="arrow('left')">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 640 640"
-                    fill="currentColor"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-                    <path
-                        d="M73.4 297.4C60.9 309.9 60.9 330.2 73.4 342.7L233.4 502.7C245.9 515.2 266.2 515.2 278.7 502.7C291.2 490.2 291.2 469.9 278.7 457.4L173.3 352L544 352C561.7 352 576 337.7 576 320C576 302.3 561.7 288 544 288L173.3 288L278.7 182.6C291.2 170.1 291.2 149.8 278.7 137.3C266.2 124.8 245.9 124.8 233.4 137.3L73.4 297.3z" />
-                </svg>
-            </button>
-
-            <!-- Centro -->
-            <button type="button" class="btn btn-outline-secondary p-3">
-                OK
-            </button>
-
-            <!-- Direita -->
-            <button type="button" class="btn btn-outline-secondary p-3" onclick="arrow('right')">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 640 640" fill="currentColor"
-                    viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-                    <path
-                        d="M566.6 342.6C579.1 330.1 579.1 309.8 566.6 297.3L406.6 137.3C394.1 124.8 373.8 124.8 361.3 137.3C348.8 149.8 348.8 170.1 361.3 182.6L466.7 288L96 288C78.3 288 64 302.3 64 320C64 337.7 78.3 352 96 352L466.7 352L361.3 457.4C348.8 469.9 348.8 490.2 361.3 502.7C373.8 515.2 394.1 515.2 406.6 502.7L566.6 342.7z" />
-                </svg>
-            </button>
-        </div>
-
-        <!-- Botão para baixo -->
-        <button type="button" class="btn btn-outline-secondary p-3" onclick="arrow('down')">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 640 640" fill="currentColor"
-                viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
-                <path
-                    d="M297.4 566.6C309.9 579.1 330.2 579.1 342.7 566.6L502.7 406.6C515.2 394.1 515.2 373.8 502.7 361.3C490.2 348.8 469.9 348.8 457.4 361.3L352 466.7L352 96C352 78.3 337.7 64 320 64C302.3 64 288 78.3 288 96L288 466.7L182.6 361.3C170.1 348.8 149.8 348.8 137.3 361.3C124.8 373.8 124.8 394.1 137.3 406.6L297.3 566.6z" />
-            </svg>
-        </button>
-    </div>
 
 
 
@@ -93,18 +48,6 @@
 
 
     <script>
-        function arrow(sentido) {
-            console.log(sentido)
-            fetch("/executar", {
-                method: "POST",
-                headers: { "Content-Type": "application/json" },
-                body: JSON.stringify({ comando: sentido })
-            })
-                .then(res => res.json())
-                .then(data => {
-                    document.getElementById("resposta").innerText = data.resposta;
-                });
-        }
 
         function enviar() {
             let comando = document.getElementById("comando").value;
@@ -115,7 +58,12 @@
             })
                 .then(res => res.json())
                 .then(data => {
-                    document.getElementById("resposta").innerText = data.resposta;
+                    if (data.redirect) {
+                        // Redireciona para a rota indicada pelo backend
+                        window.location.href = data.redirect;
+                    } else {
+                        document.getElementById("resposta").innerText = data.resposta || "";
+                    }
                 });
         }
 
